src/test/ui/parser/recover-from-bad-variant.stderr
error: expected type, found `3`
  --> $DIR/recover-from-bad-variant.rs:7:26
   |
LL |     let x = Enum::Foo(a: 3, b: 4);
   |                        - ^ expected type
   |                        |
   |                        tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information

error[E0532]: expected tuple struct or tuple variant, found struct variant `Enum::Foo`
  --> $DIR/recover-from-bad-variant.rs:10:9
   |
LL |     Foo { a: usize, b: usize },
   |     -------------------------- `Enum::Foo` defined here
...
LL |         Enum::Foo(a, b) => {}
   |         ^^^^^^^^^^^^^^^ help: use struct pattern syntax instead: `Enum::Foo { a, b }`

error[E0769]: tuple variant `Enum::Bar` written as struct variant
  --> $DIR/recover-from-bad-variant.rs:12:9
   |
LL |         Enum::Bar { a, b } => {}
   |         ^^^^^^^^^^^^^^^^^^ help: use the tuple variant pattern syntax instead: `Enum::Bar(a, b)`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0532, E0769.
For more information about an error, try `rustc --explain E0532`.
